[package]
name = "edl"
version = "1.1.0"
edition = "2021"
description = "Parse EDL (edit decision list) files."
license = "MIT"
docs = "https://docs.rs/edl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"