[package]
name = "edl"
version = "1.1.2"
edition = "2021"
description = "Parse EDL (edit decision list) files."
license = "MIT"
documentation = "https://docs.rs/edl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"